fixing header text overflow on small screens

--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -17,6 +17,10 @@
 	position: fixed;
 	width: 100%;
 	z-index: $z-index-overlay;
+
+	@include respond-to(max-width, $break-phone) {
+		padding: 0 8px 0 16px;
+	}
 }
 
 .main {
