--- a/styles/rovers.module.scss
+++ b/styles/rovers.module.scss
@@ -48,6 +48,7 @@
 
 	@include respond-to(max-width, $break-phone-small) {
 		font-size: $font-20;
+		padding: 32px 6px 84px;
 	}
 
 	&__name {
